--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -253,6 +253,8 @@ Including mathematical model.
 \subsection*{Derivation of Attributes - JB}
 ligand attributes + attributes of its surrounding
 
+time evolution, "stuckness" (speed, distance), direction, amount of free space around (radius), AA changes + properties, vorticity, ligand deformation (dihedral angles)
+
 \subsection*{Temporal Tunnel - JB}
 
 \section*{Visual Exploration}
