--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -399,21 +399,23 @@ The selection in Scatterplot Matrix is interactively linked with Barchart View.
 In this section we will describe one of case studies which we have performed using our novel exploration tool.
 In this particular study biochemists explored molecular simulation of Haloalkane dehalogenase protein together with its ligand. 
 Since the simulation consists of 50000 snapshots, it would take an enormous amount of time to analyze it using only common techniques such as 3D animation.
-Here we will show how this can be significantly improved using our exploration tool.
+In this section we will show how this can be significantly improved using our exploration tool.
 After the precomputation stage the user can start to explore individual views described in previous sections.
 
 We start with the rough analysis of the overall behavior of the ligand using our simulation overview (see Figure \ref{fig:case_overview}).
-
-Here the biochemist can immediately see that the whole simulation consist basically from two parts (divided by yellow color signalizing that tunnel was moving near the protein surface).
-
-{\color{red} když na to tak koukám, tak mám pocit, že ten overview je tak trošku na ....dvě věci, asi to krapet předělám....}
-
 
 \begin{figure}[htb]
 	\centering
   \includegraphics[width=0.95\linewidth]{img/case_overview.png}
   \caption{\label{fig:case_overview} {\color{red}TODO}}
 \end{figure}
+
+Utilizing this view the biochemist can immediately see that the whole simulation consist basically from two parts (divided by yellow color signalizing that tunnel was moving near the protein surface).
+
+{\color{red} když na to tak koukám, tak mám pocit, že ten overview je tak trošku na ....dvě věci, asi to krapet předělám....}
+
+
+
 
 
 
