--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -256,8 +256,132 @@
 %% Background %%
 %%
 \section*{Background}
-
 TODO BK + JP (Intro + RW)
+
+The study of reaction processes between different types of molecules has been an important research problem already for decades.
+A proper understanding of the processes occurring when two or more molecules react helps in the design of new chemical matters, e.g., in drug design or protein engineering.
+Here, the researchers aim to combine a protein with a given ligand in order to design a new drug or to change protein properties and their function.
+In these particular cases the ligand has to be transported from the outer solvent to the protein active site where the chemical reaction between the ligand and the amino acids surrounding the active site takes place.
+The consecutive reaction then changes the composition and properties of both molecules. 
+In protein engineering, for example, the goal is to alter the protein properties so that the new protein is, e.g., more stable and resistant to organic cosolvents~\cite{Koudelakova2013}.
+
+The design complexity of such reactions lies namely in the transportation of the ligand to the protein active site.
+As the active site is usually buried deeply in the protein structure and thus inaccessible directly from its surface, the ligand has to find a suitable transportation path through the protein structure.
+This process, called molecular docking, is very complex, lengthy, and its analysis is heavy on computational resources. 
+Therefore, researchers aim at solutions that simplify and ease the analysis for proper ligand binding.
+Currently available solutions often focus on detection of possible ligand transportation paths through the protein, called tunnels.
+These solutions are mostly based on the geometric analysis, which lead to the tunnel detection in the end, e.g., CAVER~\cite{Chovancova2012}, MOLE~\cite{Sehnal2013}, or MolAxis~\cite{Yaffe2008}.
+Other approaches, such as MoMA-LigPath~\cite{Devaurs}, aim at simulating the ligand transportation itself.
+Nevertheless, simulating the ligand docking using current computational approaches is still a challenging problem.
+There are several available variants of molecular simulation methods devised specifically to this problem. 
+Among these Steered Molecular Dynamics~\cite{Isralewitz} and Random Acceleration Molecular Dynamics~\cite{Ludemann} are able to simulate the ligand binding. 
+Such simulations produce a large amount of data containing the ligand movements that are to be explored by the domain expert.
+As the length of these simulations reaches often hundreds of thousands of time steps, it becomes impossible for the domain experts to visualize and observe the ligand movement in a frame-by-frame manner.
+Moreover, the simulation often contains movements that are irrelevant to the ligand binding.
+For example, a significant portion of the simulation the ligand usually spends outside the protein searching for a proper tunnel gorge to enter the molecule. 
+It also often happens that the ligand enters the molecule via a wrong tunnel and is then evicted from the molecule and searches for the entrance repeatedly.
+Therefore, the "true" active site entering can be in fact captured in a smaller subset of the original sequence.
+
+In this paper, we propose a new visual analysis system that addresses the aforementioned challenges, i.e.,  the transportation of a ligand to the active site. 
+We aim to provide the domain experts with a tool for intuitive and interactive exploration of already captured molecular dynamics simulation containing the process of ligand binding. 
+Using our proposed solution the users are able to distinguish between the parts of the simulation where the ligand searches for the proper path to the active site (searches the tunnel gorge or enters the wrong tunnel) and the part where the ligand finally leads to and reaches the active site.
+
+{\color{red} CHANGE
+Here, we introduce four dedicated methods for simplification of the original trajectory.
+These methods can simplify the ligand path hierarchically, thus providing several levels of detail (LOD), which can be interactively examined.
+In the most abstracted view, represented as the top-most LOD, the temporal tunnel shows only the significant shifts of the ligand towards the active site. 
+Here, the user can interactively brush time intervals, which automatically reveals and adopts the temporal tunnel to the selected interval.
+This abstracted representation, providing the brushing capabilities, is interactively linked with the 3D visualization where the 3D shape of the temporal tunnel for the given temporal window is displayed.
+Further, our tool enables to explore the amino acids surrounding the ligand along its path to the active site as well.
+
+Our proposed solution was thoroughly tested and evaluated by the domain experts from protein engineering.
+They performed the evaluation on their own simulations and their feedback is described in....}
+
+\section{Related Work}
+The interactive exploration of ligand paths through protein structures is a complex problem that requires an elaborate analysis of existing and convenient approaches.
+As our system addresses several areas, this section will be divided with respect to these areas as well. 
+Studying the ligand transport path is tightly related to the analysis of its trajectory.
+Thus, the first part will cover the topic related to the trajectory analysis, simplification, and visualization.
+Then the existing representations of tunnels and their surrounding amino acids will be addressed.
+
+\subsection{Trajectory Analysis, Simplification, and Visualization}
+When searching for the most appropriate trajectory simplification method, the taxonomy of different movement patterns introduced by Dodge et al.~\cite{Dodge2008} can help to categorize the type of motion and to propose an appropriate solution for the analysis and simplification.
+Then, Andrienko et al.~\cite{andrienko2013} describe a legacy of tools and approaches to analyze trajectory data.
+With respect to the trajectory simplification, they introduce two approaches to data abstraction representing a necessary step to achieve the reduction of the data in order to achieve informative visualizations.
+The first approach is characterized by omitting unnecessary positions and segments, while the second exploits data subsampling.
+On the other hand, they state that there is no general method to sample trajectories.
+Thus the suitability of particular sampling method is deduced from what information is considered important.
+A recent work of Vrotsou et al.~\cite{Vrotsou2015} introduce a systematic stepwise methodology for trajectory simplification with emphasis on visual analysis.
+Even though they primarily developed the tool to analyze three dimensional trajectories, it is not limited to them only.
+
+In the field of molecular biology as well as systems biology, there are several examples of methods focusing on trajectory analysis.
+Bidmon et al.~\cite{bidmon2008} present an abstract way of identification and visualization of solvent molecules' pathways within molecular dynamics. 
+In comparison to previous solutions, their approach preserves valuable information on the directions and velocities of water molecules routing along these paths. 
+Another approach that describes a guidance through a complex simulation trajectories in systems biology is presented by Luboschik et al.~\cite{Luboschik2012}. 
+The method addresses biochemical reaction networks and aims to provide the users with a tool for investigating the overall behavior of a modeled system and detailed behavior at the same time.
+
+\subsection{Visualization of Cavity and Tunnel Features}
+Phillips et al.~\cite{phillips2010} propose a method to quantitatively estimate molecular features, e.g., volume and surface areas, via ray-casting technique. This involves computation of cavities.
+Lindow et al.~\cite{LindowBH11} introduce a technique that allows to extract significant paths from the molecules. 
+In their approach the authors utilize Voronoi diagram of spheres. 
+Their final visualization is achieved by means of placing light sources on the extracted paths to enhance the presence of tunnels.
+Parulek et al.~\cite{parulek2012} exploit scatterplots to communicate the evolution of protein voids. 
+In their later study~\cite{parulek2013} they also suggest to utilize amino acids physico-chemical properties related to cavities to help users to navigate through their occurrences. 
+The visualization is then achieved in the focus and context manner.
+Lindow et al. \cite{Lindow2013} present an approach for visualization of temporal evolution of cavities in a temporal graph, which, to a certain extent, resembles our temporal tunnel model. 
+In this work they focus on the interactive exploration of the dynamics of protein cavities that can form the transportation path for a ligand. 
+They calculate and visualize the cavity volume and analyze the time-dependent changes of the cavity structure.
+The cavity dynamics is captured by rendering the cavities in a single image. 
+The final visualization is achieved through the molecular surface representation colored according to time. 
+Krone et al.~\cite{krone2013features} present a similar approach, where they extract and track tunnels in MD simulations. They exploit temporal graphs to communicate the evolution of surface areas of tunnels. In our technique, we go one step further, where in addition, we incorporate the ligand-protein interaction information and provide users with the means to navigate through details of this interaction. Moreover, we analyze sequences of several thousands of frames, which is not the case in aforementioned approaches.
+Kozlikova et al.~\cite{kozlikova2014vcbm} propose a way to seamlessly visualize the geometry and shape of tunnels across MD simulation. Here, they aim at 3D visualization solely, which is not suitable way of exploring and understanding of thousands of simulation time-steps.
+Byska et al.~\cite{byska2016} introduce an approach to interactively explore the tunnel objects in MD simulations. Similarly to our approach they visualize the time-varying tunnel as a profile graph that includes information on surrounding amino acids. Nevertheless, they focus on a single tunnel instance and do not provide the means to explore the ligand-protein interaction.
+
+%-------------------------------------------------------------------------
+\section{Problem Description and Input Data}
+When studying long molecular dynamics simulations, the researchers have to face namely the following high-level tasks:
+\begin{itemize}
+\item Detect the part of the simulation where the ligand enters the protein and finally reaches the active site.
+\item Explore this route in detail and detect its bottlenecks.
+\end{itemize}
+In consequence, these steps are performed in order to reveal the parts of the trajectory where the ligand gets stuck.
+It means that in such parts there are some obstacles made by the surrounding amino acids.
+These obstacles can be geometric (the empty space between these amino acids is too narrow) or physico-chemical (the properties of the amino acids are incompatible with the ligand properties), or their combination.
+The geometric obstacles can be detected by using an algorithm for tunnel computation in molecular dynamics (e.g., CAVER~\cite{Chovancova2012} or MOLE~\cite{Sehnal2013}).
+These tools are able to produce the information about time evolution of individual tunnels and for each tunnel detect its bottleneck -- the narrowest part limiting the size of the ligand aiming to pass through this tunnel.
+Figure~\ref{fig:tunnel} shows an example of small ligand passing through a tunnel computed by CAVER algorithm and visualized using CAVER Analyst~\cite{Kozlikova2014}. 
+The tunnel is colored with respect to the hydrophobicity of the surrounding amino acids and the geometric bottleneck of the tunnel is clearly visible.
+
+\begin{figure}[htb]
+	\centering
+  \includegraphics[width=1\linewidth]{img/tunnel.png}
+  \caption{\label{fig:tunnel} Small ligand (green) passing through a tunnel represented by the transparent surface. The surface encloses the available empty space along the tunnel centerline and is colored with respect to the hydrophobicity of the surrounding amino acids (hydrophobic -- red, hydrophylic -- blue, neutral -- violet). The active site is located in the left ending of the tunnel.}
+\end{figure}
+
+However, this bottleneck can be to some extent influenced by the passing ligand and this influence is also determined by the physico-chemical properties of the ligand and the bottleneck-lining amino acids (e.g., hydrophobicity or partial charges of individual atoms).
+To reveal such dependencies, it requires the involvement and experience of the domain expert who has to study the ligand trajectory captured in the molecular dynamics simulation.
+And for such task a proper visual representation and guidance through such large data is substantial.
+
+In protein engineering, all these effort can finally lead to the detection of amino acids along the ligand trajectory which caused problems, i.e., were the key players in situations when the ligand gets stuck.
+Such amino acids are then the best candidates for subsequent mutation of the protein chain when these amino acids are replaced by more suitable ones wrt. their size and properties.
+On the other hand, in drug design the aim is to propose modifications of the ligand to increase the binding likelihood in order to design a better drug produced from this ligand.
+
+The input data is obtained from the simulations of molecular dynamics which contains the movements of the protein and one or more ligands.
+Ligands can follow two main routes -- they can be transported from the outside environment to the protein active site or vice versa (after the desired reaction the product leaves the protein).
+
+The length of the simulations may vary from few hundreds to hundreds of thousands of time steps.  
+This depends namely on the ligand velocity and its ability to find the proper path to the active site.
+Figure \ref{fig:lig_movement} shows an example of a ligand trajectory consisting of $50.000$ time steps. 
+
+\begin{figure}[htb]
+	\centering
+  \includegraphics[width=0.95\linewidth]{img/lig_movement.png}
+  \caption{\label{fig:lig_movement} Ligand trajectory (gray) for a simulation containing $50.000$ time steps.}
+\end{figure}
+
+Long simulations can often contain many time steps when the ligand followed an impasse -- it tried to find the proper entrance point to the protein (tunnel gorge) or entered a wrong tunnel and had to return.
+Such parts of the simulation could be of less interest so that the user should be provided with a possibility to filter them out and focus only on the interesting parts.
+
 
 \section*{Method}
 \subsection*{Overview + workflow - BK}
@@ -381,17 +505,19 @@ As a result the scatterplot can easily reveal trends and relationships between a
 Interactive manipulation with scatterplot, such as selection, zooming and change of displayed attributes provides easy way of manual data filtering. 
 To eliminate the noise in the data caused by ligand jittering, we propose several smoothing and aggregation functions.
 \todo{nechat len sliding window?} 
-The Sliding window function assigns to each time step averaged value of its neighborhood.
+The Sliding Window function assigns to each time step averaged value of its neighborhood.
 The size of the neighborhood is user regulated. 
 
 The plots can further be stacked, forming a matrix and thus showing relationship between multiple attributes at once.
 The stacked plots are also interactively interconnected.
 The selection in Scatterplot Matrix is interactively linked with Barchart View.
 
+Figure \ref{fig:scatterplot} shows Scatterplot Matrix for a sequence of $500$ time steps.
+
 \begin{figure}[htb]
 	\centering
   \includegraphics[width=0.95\linewidth]{img/scatterplot.png}
-  \caption{\label{fig:scatterplot} CHANGE!!! Scatterplot Matrix depicting Time vs. Distance and Time vs Speed property before (up) and after (down) smoothing by Sliding Window Function.}
+  \caption{\label{fig:scatterplot} CHANGE!!! Scatterplot Matrix depicting Time vs. Distance and Time vs Speed property before (up) and after (down) smoothing by Sliding Window function.}
 \end{figure}
 
 
