--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -475,7 +475,7 @@ It might be usefull for biochemists to observe such physico-chemical properties 
 time evolution, "stuckness" (speed, distance), direction, amount of free space around (radius), AA changes + properties, vorticity, ligand deformation (dihedral angles)
 
 \section*{Visual Exploration}
-
+\todo{treba tiez popisat interakciu s kazdym view}
 \subsection*{Data Views - BK + ladies}
 motivation, design
 
